<resources>
    <string name="app_name">WeatherBear</string>
    <string name="api_json" translatable="false">json</string>
    <string name="api_daily" translatable="false">DAILY</string>
    <string name="body_temperature">Wind chill temp</string>
    <string name="c">℃</string>
    <string name="today_weather">Today\'s weather</string>
    <string name="today_temperatures">Today\'s temp</string>
    <string name="tomorrow_weather">Tomorrow\'s weather</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="weekly_weather">Weekly forecast</string>
    <string name="unable_get_locaiton">Cannot retrive location information.</string>
    <string name="ultrafine_dust">Ultra fine dust</string>
    <string name="fine_dust">Fine dust</string>
    <string name="fine_dust_very_bad">Very bad</string>
    <string name="fine_dust_bad">Bad</string>
    <string name="fine_dust_normal">Normal</string>
    <string name="fine_dust_good">Good</string>
    <string name="now">Now</string>
    <string name="msg_snow">Snowy</string>
    <string name="msg_wind">Windy</string>
    <string name="msg_sunny">Sunny</string>
    <string name="msg_sunny_night">Sunny(night)</string>
    <string name="msg_cloud">Cloudy</string>
    <string name="msg_cloud_night">Cloudy(night)</string>
    <string name="msg_rain">Rain</string>
    <string name="msg_thunder">Thunder</string>
    <string name="msg_thunder_rainy">Thunder&amp;rain</string>
    <string name="mnu_location">Select location</string>
    <string name="mnu_info">About this app</string>
    <string name="err_str_location_ready">Location error occurred</string>
    <string name="search_location_error">Temporary cannot search locations</string>
    <string name="search_location_letssearch">Let\'s search your location :)</string>
    <string name="search_location_no_result">No result.\nTry again with another keyword.</string>
    <string name="search_location_type_here">Type an address here to search.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="request_fail">Request Fail</string>
    <string name="msg_heavy_snow">Heavy snow</string>
    <string name="msg_delete_this_address_q">Delete this address?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="select_location_chk_show_current_location_first_page">Show current location\'s information in the first page</string>
    <string name="select_location_no_location_please_add">There is no added address.\nPlease add address by click below \'add\' button.</string>
    <string name="main_no_address_added_touch_here_to_add">No user address is added.\nTouch here to add your addresses.</string>
    <string name="noWeatherData">No weather data</string>
    <string name="noData">No data</string>
    <string name="noTomorrowData">There is no data for tomorrow!</string>
    <string name="msg_top_weather_ps">Today\'s weather %s.</string>
    <string name="msg_top_air_quality_ps">Today\'s air quality %s.</string>
    <string name="msg_top_sunny">sunny</string>
    <string name="msg_top_rainy">rainy</string>
    <string name="msg_top_snowy">snowy</string>
    <string name="msg_top_cloudy">cloudy</string>
    <string name="msg_top_thunder">thunderstorms</string>
    <string name="msg_top_air_good">good</string>
    <string name="msg_top_air_normal">moderate</string>
    <string name="msg_top_air_bad">unhealthy</string>
    <string name="msg_top_air_worst">hazard</string>
    <string name="msg_top_unknown">unknown</string>
    <string name="msg_add_location_from_gps_q">Do you want to add the address from current your GPS location?</string>
    <string name="msg_acquiring_your_location_gps">Acquiring your location from GPS..</string>
    <string name="info_developers">Euni Goh\nJujin Kim\nSanghee Choi\nYujeong Kim</string>
    <string name="info_contributors" translatable="false">Contributors:\nbigstark</string>
    <string name="info_open_app_info">Open app info</string>
    <string name="info_opensource"><u>Open source licences</u></string>
</resources>
